--- a/src/Hosts/Gate.Kayak/Gate.Kayak.csproj
+++ b/src/Hosts/Gate.Kayak/Gate.Kayak.csproj
@@ -44,6 +44,7 @@
     <Compile Include="GateRequestDelegate.cs" />
     <Compile Include="HttpServerExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SchedulerMiddleware.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Gate\Gate.csproj">
