--- a/src/Tests/Gate.Kayak.Tests/Gate.Kayak.Tests.csproj
+++ b/src/Tests/Gate.Kayak.Tests/Gate.Kayak.Tests.csproj
@@ -53,6 +53,7 @@
     <Compile Include="GateRequestDelegateTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SchedulerMiddlewareTests.cs" />
+    <Compile Include="Workaround.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
