Add a Gate.AspNet.Handler class to allow normal pipeline to execute
Also Adds an AppHandlerSingleton class to control creation/holding
of AppDelegate for both Module and Handler execution paths

--- a/src/Hosts/Gate.AspNet/Gate.AspNet.csproj
+++ b/src/Hosts/Gate.AspNet/Gate.AspNet.csproj
@@ -38,6 +38,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppHandler.cs" />
+    <Compile Include="AppHandlerSingleton.cs" />
+    <Compile Include="Handler.cs" />
     <Compile Include="Module.cs" />
     <Compile Include="..\..\Gate.Helpers\Body.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
