--- a/src/Samples/Sample.AspNet/Web.config
+++ b/src/Samples/Sample.AspNet/Web.config
@@ -7,9 +7,22 @@
 	</system.web>
 
 	<system.webServer>
-		<modules runAllManagedModulesForAllRequests="true">
+    <!-- 
+      Configuring for Gate.AspNet.Module for AppDomain.
+      This bypasses the normal native/managed module pipeline.
+      -->
+
+    <!--<modules runAllManagedModulesForAllRequests="true">
 			<add name="Gate" type="Gate.AspNet.Module, Gate.AspNet" />
-		</modules>
+		</modules>-->
+
+    <!-- 
+      Configuring for Gate.AspNet.Handler for all requests.
+      This also allows existing modules to run. 
+      -->
+    <handlers>
+      <add name="Gate" path="*" verb="*" type="Gate.AspNet.Handler, Gate.AspNet" />
+    </handlers>
 	</system.webServer>
 
 </configuration>
