--- a/src/Tests/Gate.AspNet.Tests/Gate.AspNet.Tests.csproj
+++ b/src/Tests/Gate.AspNet.Tests/Gate.AspNet.Tests.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppHandlerSingletonTests.cs" />
     <Compile Include="AppHandlerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RemoteHostClosedStream.cs" />
