--- a/src/Gate.Owin/Gate.Owin.csproj
+++ b/src/Gate.Owin/Gate.Owin.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{BE3CCA19-0795-4477-A4D4-ABF45474ACBF}</ProjectGuid>
+    <ProjectGuid>{B60C657C-80DA-4AA3-8796-AD920D5EB5A0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Gate</RootNamespace>
-    <AssemblyName>Gate</AssemblyName>
+    <RootNamespace>Gate.Owin</RootNamespace>
+    <AssemblyName>Gate.Owin</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -33,34 +33,15 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Delegates.cs" />
-    <Compile Include="Environment.cs" />
-    <Compile Include="NotFound.cs" />
-    <Compile Include="IApplication.cs" />
-    <Compile Include="IMiddleware.cs" />
-    <Compile Include="Startup\AppBuilderArgs.cs" />
-    <Compile Include="Startup\Builder\AppBuilder.cs" />
-    <Compile Include="Startup\Builder\BaseBuilder.cs" />
-    <Compile Include="Startup\Builder\MapBuilder.cs" />
-    <Compile Include="Startup\Builder\IAppBuilder.cs" />
-    <Compile Include="Startup\Loader\DefaultConfigurationLoader.cs" />
-    <Compile Include="Startup\Loader\IConfigurationLoader.cs" />
-    <Compile Include="Startup\MapExtensions.cs" />
-    <Compile Include="Startup\RunExtensions.cs" />
-    <Compile Include="Startup\UseExtensions.cs" />
-    <Compile Include="UrlMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Gate.Owin\Gate.Owin.csproj">
-      <Project>{B60C657C-80DA-4AA3-8796-AD920D5EB5A0}</Project>
-      <Name>Gate.Owin</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
