--- a/src/Tests/Gate.Helpers.Tests/Gate.Helpers.Tests.csproj
+++ b/src/Tests/Gate.Helpers.Tests/Gate.Helpers.Tests.csproj
@@ -68,6 +68,10 @@
       <Project>{85392B05-6564-472B-9A7B-58AFB721F2AE}</Project>
       <Name>Gate.Helpers</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Gate.Owin\Gate.Owin.csproj">
+      <Project>{B60C657C-80DA-4AA3-8796-AD920D5EB5A0}</Project>
+      <Name>Gate.Owin</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Gate\Gate.csproj">
       <Project>{BE3CCA19-0795-4477-A4D4-ABF45474ACBF}</Project>
       <Name>Gate</Name>
