--- a/src/Gate.Builder/Gate.Builder.csproj
+++ b/src/Gate.Builder/Gate.Builder.csproj
@@ -32,15 +32,27 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppBuilder.cs" />
+    <Compile Include="Delegates.cs" />
+    <Compile Include="Implementation\BaseBuilder.cs" />
+    <Compile Include="IAppBuilder.cs" />
+    <Compile Include="Implementation\MapBuilder.cs" />
+    <Compile Include="Implementation\NotFound.cs" />
+    <Compile Include="Implementation\UrlMapper.cs" />
+    <Compile Include="Loader\DefaultConfigurationLoader.cs" />
+    <Compile Include="Loader\IConfigurationLoader.cs" />
+    <Compile Include="MapExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RunExtensions.cs" />
+    <Compile Include="UseExtensions.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Gate.Owin\Gate.Owin.csproj">
+      <Project>{B60C657C-80DA-4AA3-8796-AD920D5EB5A0}</Project>
+      <Name>Gate.Owin</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
