--- a/src/Gate/Gate.csproj
+++ b/src/Gate/Gate.csproj
@@ -37,20 +37,19 @@
   <ItemGroup>
     <Compile Include="Builder\AppBuilder.cs" />
     <Compile Include="Builder\Delegates.cs" />
-    <Compile Include="Builder\IAppBuilder.cs" />
-    <Compile Include="Builder\Implementation\BaseBuilder.cs" />
-    <Compile Include="Builder\Implementation\MapBuilder.cs" />
-    <Compile Include="Builder\Implementation\NotFound.cs" />
-    <Compile Include="Builder\Implementation\UrlMapper.cs" />
+    <Compile Include="IAppBuilder.cs" />
+    <Compile Include="Builder\BaseBuilder.cs" />
+    <Compile Include="Builder\MapBuilder.cs" />
+    <Compile Include="NotFound.cs" />
+    <Compile Include="Builder\UrlMapper.cs" />
     <Compile Include="Builder\Loader\DefaultConfigurationLoader.cs" />
     <Compile Include="Builder\Loader\IConfigurationLoader.cs" />
-    <Compile Include="Builder\MapExtensions.cs" />
-    <Compile Include="Builder\RunExtensions.cs" />
-    <Compile Include="Builder\UseExtensions.cs" />
+    <Compile Include="AppBuilderMapExtensions.cs" />
+    <Compile Include="AppBuilderRunExtensions.cs" />
+    <Compile Include="AppBuilderUseExtensions.cs" />
     <Compile Include="Environment.cs" />
     <Compile Include="Utils\ParamDictionary.cs" />
     <Compile Include="Utils\Spool.cs" />
-    <Compile Include="NotFound.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Request.cs" />
     <Compile Include="Response.cs" />
