--- a/src/Gate/Gate.csproj
+++ b/src/Gate/Gate.csproj
@@ -42,8 +42,8 @@
     <Compile Include="Builder\MapBuilder.cs" />
     <Compile Include="NotFound.cs" />
     <Compile Include="Builder\UrlMapper.cs" />
-    <Compile Include="Builder\Loader\DefaultConfigurationLoader.cs" />
-    <Compile Include="Builder\Loader\IConfigurationLoader.cs" />
+    <Compile Include="Builder\Loader\DefaultStartupLoader.cs" />
+    <Compile Include="Builder\Loader\IStartupLoader.cs" />
     <Compile Include="AppBuilderMapExtensions.cs" />
     <Compile Include="AppBuilderRunExtensions.cs" />
     <Compile Include="AppBuilderUseExtensions.cs" />
