--- a/src/Tests/Gate.Middleware.Tests/Gate.Middleware.Tests.csproj
+++ b/src/Tests/Gate.Middleware.Tests/Gate.Middleware.Tests.csproj
@@ -66,5 +66,6 @@
     <Compile Include="PredicateTests.cs" />
     <Compile Include="BasicAuthTests.cs" />
     <Compile Include="TransformTests.cs" />
+    <Compile Include="ContentLengthTests.cs" />
   </ItemGroup>
 </Project>
