--- a/src/Tests/Gate.Middleware.Tests/Gate.Middleware.Tests.csproj
+++ b/src/Tests/Gate.Middleware.Tests/Gate.Middleware.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -67,5 +67,6 @@
     <Compile Include="BasicAuthTests.cs" />
     <Compile Include="TransformTests.cs" />
     <Compile Include="ContentLengthTests.cs" />
+    <Compile Include="ChunkedTests.cs" />
   </ItemGroup>
 </Project>
