--- a/src/Samples/Sample.App/Sample.App.csproj
+++ b/src/Samples/Sample.App/Sample.App.csproj
@@ -64,6 +64,10 @@
       <Project>{B60C657C-80DA-4AA3-8796-AD920D5EB5A0}</Project>
       <Name>Gate.Owin</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Gate.Middleware\Gate.Middleware.csproj">
+      <Project>{60C36D8F-BE53-4733-BD92-CFA103D46020}</Project>
+      <Name>Gate.Middleware</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\FileUpload.spark" />
