--- a/src/Gate.Middleware/Gate.Middleware.csproj
+++ b/src/Gate.Middleware/Gate.Middleware.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -33,14 +33,21 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BodyStream.cs" />
+    <Compile Include="FileBody.cs" />
+    <Compile Include="FileServer.cs" />
     <Compile Include="MethodOverride.cs" />
+    <Compile Include="Mime.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BasicAuth.cs" />
     <Compile Include="Predicate.cs" />
+    <Compile Include="StateMachine.cs" />
     <Compile Include="Static.cs" />
+    <Compile Include="TextBody.cs" />
     <Compile Include="Transform.cs" />
     <Compile Include="ContentLength.cs" />
     <Compile Include="Chunked.cs" />
@@ -53,12 +60,10 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ShowExceptions.View.tt</DependentUpon>
     </Compile>
+    <Compile Include="Utils\HttpFormatExtensions.cs" />
+    <Compile Include="Utils\RangeHeader.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Gate.Helpers\Gate.Helpers.csproj">
-      <Project>{85392B05-6564-472B-9A7B-58AFB721F2AE}</Project>
-      <Name>Gate.Helpers</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Gate.Owin\Gate.Owin.csproj">
       <Project>{B60C657C-80DA-4AA3-8796-AD920D5EB5A0}</Project>
       <Name>Gate.Owin</Name>
