Adding BodyStream tests.

--- a/src/Tests/Gate.Middleware.Tests/Gate.Middleware.Tests.csproj
+++ b/src/Tests/Gate.Middleware.Tests/Gate.Middleware.Tests.csproj
@@ -62,6 +62,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BodyStreamTests.cs" />
     <Compile Include="ContentLengthTests.cs">
       <SubType>Code</SubType>
     </Compile>
