--- a/src/Gate.Builder/Gate.Builder.csproj
+++ b/src/Gate.Builder/Gate.Builder.csproj
@@ -5,11 +5,12 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{BE3CCA19-0795-4477-A4D4-ABF45474ACBF}</ProjectGuid>
+    <ProjectGuid>{D26293A2-8533-4BF6-A9CC-A88455B0FF71}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Gate</RootNamespace>
-    <AssemblyName>Gate</AssemblyName>
+    <RootNamespace>Gate.Builder</RootNamespace>
+    <AssemblyName>Gate.Builder</AssemblyName>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -30,23 +31,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Builder\Delegates.cs" />
-    <Compile Include="Builder\MapBuilder.cs" />
+    <Compile Include="AppBuilder.cs" />
+    <Compile Include="Adapters.cs" />
+    <Compile Include="Loader\IStartupLoader.cs" />
+    <Compile Include="Loader\StartupLoader.cs" />
     <Compile Include="NotFound.cs" />
-    <Compile Include="Builder\UrlMapper.cs" />
-    <Compile Include="AppBuilderMapExtensions.cs" />
-    <Compile Include="AppBuilderRunExtensions.cs" />
-    <Compile Include="AppBuilderUseExtensions.cs" />
-    <Compile Include="Environment.cs" />
-    <Compile Include="Utils\ParamDictionary.cs" />
-    <Compile Include="Utils\Spool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Request.cs" />
-    <Compile Include="Response.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Gate.Owin\Gate.Owin.csproj">
+      <Project>{B60C657C-80DA-4AA3-8796-AD920D5EB5A0}</Project>
+      <Name>Gate.Owin</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -56,10 +55,4 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-  <ItemGroup>
-    <ProjectReference Include="..\Gate.Owin\Gate.Owin.csproj">
-      <Project>{B60C657C-80DA-4AA3-8796-AD920D5EB5A0}</Project>
-      <Name>Gate.Owin</Name>
-    </ProjectReference>
-  </ItemGroup>
 </Project>
