--- a/src/Gate.Owin/Gate.Owin.csproj
+++ b/src/Gate.Owin/Gate.Owin.csproj
@@ -34,6 +34,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Delegates.cs" />
+    <Compile Include="IAppBuilder.cs" />
     <Compile Include="OwinApp.cs">
       <SubType>Code</SubType>
     </Compile>
