Adding RangeHeader tests and moving to TryGet in RangeHeader.cs

--- a/src/Tests/Gate.Middleware.Tests/Gate.Middleware.Tests.csproj
+++ b/src/Tests/Gate.Middleware.Tests/Gate.Middleware.Tests.csproj
@@ -70,6 +70,7 @@
     <Compile Include="MethodOverrideTests.cs" />
     <Compile Include="PredicateTests.cs" />
     <Compile Include="BasicAuthTests.cs" />
+    <Compile Include="RangeHeaderTests.cs" />
     <Compile Include="StaticTests.cs" />
     <Compile Include="TransformTests.cs" />
     <Compile Include="ChunkedTests.cs" />
