Moving request/response to class-based stateful machines
More code than functional approach, but helpful to ensure that
the complete/error notifications fire appropriately

--- a/src/Hosts/Gate.AspNet/Gate.AspNet.csproj
+++ b/src/Hosts/Gate.AspNet/Gate.AspNet.csproj
@@ -40,7 +40,8 @@
     <Compile Include="AppHandlerSingleton.cs" />
     <Compile Include="Handler.cs" />
     <Compile Include="Module.cs" />
-    <Compile Include="..\..\Gate.Helpers\Body.cs" />
+    <Compile Include="PipeRequest.cs" />
+    <Compile Include="PipeResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
