--- a/src/Samples/Sample.AspNet/Sample.AspNet.csproj
+++ b/src/Samples/Sample.AspNet/Sample.AspNet.csproj
@@ -35,11 +35,18 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Nancy, Version=0.9.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\packages\Nancy.0.9.0\lib\net40\Nancy.dll</HintPath>
+    </Reference>
     <Reference Include="Nancy.Hosting.Owin">
       <HintPath>..\..\..\dependencies\nancy\binaries\Nancy.Hosting.Owin.dll</HintPath>
     </Reference>
     <Reference Include="Nancy.ViewEngines.Spark">
-      <HintPath>..\..\..\dependencies\nancy\binaries\Nancy.ViewEngines.Spark.dll</HintPath>
+      <HintPath>..\..\..\packages\Nancy.Viewengines.Spark.0.9.0\lib\net40\Nancy.ViewEngines.Spark.dll</HintPath>
+    </Reference>
+    <Reference Include="Spark">
+      <HintPath>..\..\..\packages\Spark.1.5.1\lib\NET40\Spark.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -56,12 +63,6 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
-    <Reference Include="Nancy">
-      <HintPath>..\..\..\dependencies\nancy\binaries\Nancy.dll</HintPath>
-    </Reference>
-    <Reference Include="Spark">
-      <HintPath>..\..\..\dependencies\nancy\binaries\Spark.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Web.config">
@@ -101,6 +102,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Index.spark" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
