--- a/src/Tests/Gate.Kayak.Tests/packages.config
+++ b/src/Tests/Gate.Kayak.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="HttpMachine" version="0.9.0.0" />
-  <package id="Kayak" version="0.6.2" />
+  <package id="Kayak" version="0.7.2" />
+  <package id="NUnit" version="2.5.10.11092" />
 </packages>
