Moving main projects into src\Main folder
Similar pattern as Tests, Hosts, etc

--- a/src/Samples/Sample.Wcf/Sample.Wcf.csproj
+++ b/src/Samples/Sample.Wcf/Sample.Wcf.csproj
@@ -75,7 +75,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Gate\Gate.csproj">
+    <ProjectReference Include="..\..\Main\Gate\Gate.csproj">
       <Project>{BE3CCA19-0795-4477-A4D4-ABF45474ACBF}</Project>
       <Name>Gate</Name>
     </ProjectReference>
