--- a/src/Tests/Gate.TestHelpers/Gate.TestHelpers.csproj
+++ b/src/Tests/Gate.TestHelpers/Gate.TestHelpers.csproj
@@ -51,19 +51,19 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Gate.Builder\Gate.Builder.csproj">
+    <ProjectReference Include="..\..\Main\Gate.Builder\Gate.Builder.csproj">
       <Project>{D26293A2-8533-4BF6-A9CC-A88455B0FF71}</Project>
       <Name>Gate.Builder</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Gate.Helpers\Gate.Helpers.csproj">
+    <ProjectReference Include="..\..\Main\Gate.Helpers\Gate.Helpers.csproj">
       <Project>{85392B05-6564-472B-9A7B-58AFB721F2AE}</Project>
       <Name>Gate.Helpers</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Gate\Gate.csproj">
+    <ProjectReference Include="..\..\Main\Gate\Gate.csproj">
       <Project>{BE3CCA19-0795-4477-A4D4-ABF45474ACBF}</Project>
       <Name>Gate</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Gate.Owin\Gate.Owin.csproj">
+    <ProjectReference Include="..\..\Main\Gate.Owin\Gate.Owin.csproj">
       <Project>{B60C657C-80DA-4AA3-8796-AD920D5EB5A0}</Project>
       <Name>Gate.Owin</Name>
     </ProjectReference>
