--- a/src/Main/Gate.Middleware/Gate.Middleware.csproj
+++ b/src/Main/Gate.Middleware/Gate.Middleware.csproj
@@ -5,13 +5,13 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{85392B05-6564-472B-9A7B-58AFB721F2AE}</ProjectGuid>
+    <ProjectGuid>{60C36D8F-BE53-4733-BD92-CFA103D46020}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Gate.Helpers</RootNamespace>
-    <AssemblyName>Gate.Helpers</AssemblyName>
+    <RootNamespace>Gate.Middleware</RootNamespace>
+    <AssemblyName>Gate.Middleware</AssemblyName>
     <FileAlignment>512</FileAlignment>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\..\Gate\</SolutionDir>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\..\..\Gate\</SolutionDir>
     <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -34,29 +34,51 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AsyncResult.cs" />
-    <Compile Include="Body.cs" />
-    <Compile Include="InputStream.cs" />
-    <Compile Include="OutputStream.cs" />
+    <Compile Include="StaticFiles\BodyStream.cs" />
+    <Compile Include="StaticFiles\FileBody.cs" />
+    <Compile Include="StaticFiles\FileServer.cs" />
+    <Compile Include="MethodOverride.cs" />
+    <Compile Include="StaticFiles\Mime.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Wilson.cs" />
+    <Compile Include="BasicAuth.cs" />
+    <Compile Include="Predicate.cs" />
+    <Compile Include="StaticFiles\StateMachine.cs" />
+    <Compile Include="Static.cs" />
+    <Compile Include="StaticFiles\TextBody.cs" />
+    <Compile Include="Transform.cs" />
+    <Compile Include="ContentLength.cs" />
+    <Compile Include="Chunked.cs" />
+    <Compile Include="Cascade.cs" />
+    <Compile Include="ContentType.cs" />
+    <Compile Include="RewindableBody.cs" />
+    <Compile Include="ShowExceptions.cs" />
+    <Compile Include="ShowExceptions.View.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ShowExceptions.View.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Utils\HttpFormatExtensions.cs" />
+    <Compile Include="Utils\RangeHeader.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Gate\Gate.csproj">
-      <Project>{BE3CCA19-0795-4477-A4D4-ABF45474ACBF}</Project>
-      <Name>Gate</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Gate.Owin\Gate.Owin.csproj">
       <Project>{B60C657C-80DA-4AA3-8796-AD920D5EB5A0}</Project>
       <Name>Gate.Owin</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Gate\Gate.csproj">
+      <Project>{BE3CCA19-0795-4477-A4D4-ABF45474ACBF}</Project>
+      <Name>Gate</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ShowExceptions.View.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>ShowExceptions.View.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
