Removing dependency from Gate.Kayak to Gate
The host handler only needs Gate.Builder and Gate.Owin to
interoperate.

--- a/src/Hosts/Gate.Kayak/Gate.Kayak.csproj
+++ b/src/Hosts/Gate.Kayak/Gate.Kayak.csproj
@@ -45,6 +45,7 @@
     <Compile Include="GateRequestDelegate.cs" />
     <Compile Include="HttpServerExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequestEnvironment.cs" />
     <Compile Include="SchedulerMiddleware.cs" />
   </ItemGroup>
   <ItemGroup>
