--- a/src/Tests/Gate.Hosts.Manos.Tests/Gate.Hosts.Manos.Tests.csproj
+++ b/src/Tests/Gate.Hosts.Manos.Tests/Gate.Hosts.Manos.Tests.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Mono.CSharp">
+      <HintPath>..\..\..\dependencies\Mono.2.10.2\lib\net40\Mono.CSharp.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework">
       <HintPath>..\..\..\packages\NUnit.2.5.10.11092\lib\nunit.framework.dll</HintPath>
     </Reference>
@@ -53,6 +56,7 @@
   <ItemGroup>
     <Compile Include="ServerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
